--- a/build.gradle
+++ b/build.gradle
@@ -12,19 +12,19 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.2.1'
     }
 }
 
 apply plugin: 'com.android.application'
 
 dependencies {
-    compile 'com.amazonaws:aws-android-sdk-iot:2.7.+'
+    implementation 'com.amazonaws:aws-android-sdk-iot:2.7.+'
     implementation 'com.amazonaws:aws-android-sdk-s3:2.7.+'
 }
 
 android {
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '28.0.3'
     compileSdkVersion 26
     defaultConfig {
         versionCode 1
