--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.amazonaws.demo.androidpubsub"
+    package="com.amazonaws.demo.androidcamera"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -16,7 +16,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
-        <activity android:name="com.amazonaws.demo.androidpubsub.PubSubActivity" >
+        <activity android:name="com.amazonaws.demo.androidcamera.PubSubActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,20 +24,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.amazonaws.demo.androidpubsub.DownloadActivity"
+            android:name="com.amazonaws.demo.androidcamera.DownloadActivity"
             android:label="@string/download_activity" />
         <activity
-            android:name="com.amazonaws.demo.androidpubsub.DownloadSelectionActivity"
+            android:name="com.amazonaws.demo.androidcamera.DownloadSelectionActivity"
             android:label="@string/download_selection_activity" />
         <activity
-            android:name="com.amazonaws.demo.androidpubsub.ImageViewActivity"
+            android:name="com.amazonaws.demo.androidcamera.ImageViewActivity"
             android:label="@string/imageview_activity" />
 
         <service
             android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService"
             android:enabled="true" />
         <service
-            android:name=".MyService"
+            android:name="com.amazonaws.demo.androidcamera.MyService"
             android:enabled="true" />
     </application>
 
